--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,13 @@
     "csv-stringify": "^6.4.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.5.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.0",
-    "mysql2": "^3.0.0"
+    "morgan": "^1.10.0",
+    "mysql2": "^3.14.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.22"
   }
 }
